tests/ui/once_cache_none_requires_option_return.rs
use cached::macros::once;

#[once(cache_none = true)]
fn my_fn() -> i32 {
    0
}

fn main() {}
